fixed spacing errors on login/signup form

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    margin-left: 5%;
+    box-sizing: border-box;
     padding: 30px;
     .form-section-left{
         margin: 10px;
